# list-user-permissions-for-aws-idc

./: .gitignore  LICENSE  README.md  pyproject.toml
aws_idc_list_user_permissions/: aws_idc_list_user_permissions.py  file_output_utils.py  list_user_permissions.py  output.py
list_user_permissions_for_aws_idc/: list_user_permissions.py  list_user_permissions_for_aws_idc.py  list_utils.py
tests/: test_organizations.py
